--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "remark-html": "^11.0.1"
   },
   "devDependencies": {
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "typescript": "^3.8.3"
   }
 }
